fixed the invisible link under about

--- a/content/css/core.css
+++ b/content/css/core.css
@@ -258,26 +258,10 @@ body{
     width: 100%;
     height: 480px;
     overflow: auto;
-    /*
-          -moz-border-radius: 5px;
-          -webkit-border-radius: 5px;
-          border-radius: 5px;
-
-             -moz-box-shadow: inset 0px 0px 10px rgba(69,69,69,1);
-             -webkit-box-shadow: inset 0px 0px 10px rgba(69,69,69,1);
-             box-shadow: inset 0px 0px 10px rgba(69,69,69,1);*/
-
 
     -moz-box-shadow:  0px 0px 25px 2px rgba(0,0,0,0.5);
     -webkit-box-shadow:  0px 0px 25px 2px rgba(0,0,0,0.5);
     box-shadow:  0px 0px 25px 2px rgba(0,0,0,0.5);
-
-    /*
-    -moz-box-shadow: 1px 16px 14px -13px rgba(0,0,0,.5);
-    -webkit-box-shadow: 1px 16px 14px -13px rgba(0,0,0,.5);
-    box-shadow: 1px 16px 14px -13px rgba(0,0,0,.5));*/
-
-   /* border: 1px solid #303030;*/
 
 }
 
@@ -382,15 +366,6 @@ body{
     background-image: url(../img/treehouse.jpg);
     background-repeat: no-repeat;
     background-position: top left;
-
-  /*  border: 3px solid #fff;*/
-   /* -moz-border-radius: 5px;
-    -webkit-border-radius: 5px;
-    border-radius: 5px;*/
-/*
-    -moz-box-shadow:  0px 0px 5px rgba(0,0,0,0.5);
-    -webkit-box-shadow:  0px 0px 5px rgba(0,0,0,0.5);
-    box-shadow:  0px 0px 5px rgba(0,0,0,0.5);*/
 }
 
 
@@ -454,14 +429,6 @@ body{
 
     text-align: left;
     width: 100%;
-
-/*
-    -webkit-border-top-left-radius: 5px;
-    -webkit-border-top-right-radius: 5px;
-    -moz-border-radius-topleft: 5px;
-    -moz-border-radius-topright: 5px;
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;*/
 
 }
 
@@ -1223,7 +1190,7 @@ a:link,
 a:visited{
     font: 11px Verdana, Geneva, Arial, Helvetica, sans-serif;
     font-size: 12px;
-    color: #f5f4f4;
+    color: #239708;
     text-decoration: none;
 }
 
